# pipecat

examples/simple-chatbot/: Dockerfile  README.md  bot.py  pyproject.toml
